--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             Marine habitats for sea animals vary widely and can be broadly categorized into coastal and open ocean environments. Coastal habitats include intertidal zones, estuaries, salt marshes, kelp forests, seagrass meadows, and coral reefs. Open ocean habitats are found beyond the continental shelf and include the surface waters, deep sea, and ocean floor. 
         </h3>
         <p><b>Click image to learn more...</b></p>
-        <a href="https://bio.libretexts.org/Bookshelves/Microbiology/Microbiology_(Boundless)/16%3A_Microbial_Ecology/16.03%3A_Aquatic_Microbiology/16.3A%3A_Marine_Habitats" style="text-align: center;"><img src="C:\Users\epsib\OneDrive\Documents\Webtech\webtech_exp1\Image\image (7).png"></a>   
+        <a href="https://bio.libretexts.org/Bookshelves/Microbiology/Microbiology_(Boundless)/16%3A_Microbial_Ecology/16.03%3A_Aquatic_Microbiology/16.3A%3A_Marine_Habitats" style="text-align: center;"><img src="Image/image (7).png"></a>   
     </div>
     <table>
         <tr>
