--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 style="background-color: aliceblue;">Ocean Life Display</h2>
     </div>
     <div class="image">
-        <img src="C:\Users\epsib\OneDrive\Documents\Webtech\webtech_exp1\Image\106945244-H.jpg" alt="aquatic animals" style="width:50%;">
+        <img src="Image/106945244-H.jpg" alt="aquatic animals" style="width:50%;">
     </div>
     <div class="text" style="font-size: medium;">
         <h3>
