--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <tr>
             <td>
-                <img src="C:\Users\epsib\OneDrive\Documents\Webtech\webtech_exp1\Image\bull-kelp-tr18-0582.webp" alt="bull kelp" style="width:100%;">
+                <img src="Image/bull-kelp-tr18-0582.webp" alt="bull kelp" style="width:100%;">
             </td>
             <td>
                 <h3><span style="color: rgb(4, 131, 48);">About bull kelp</span>
