--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <tr>
             <td>
-                <img src="C:\Users\epsib\OneDrive\Documents\Webtech\webtech_exp1\Image\basket-star-tr21-0115.webp" alt="basket start" width="100%">
+                <img src="Image/basket-star-tr21-0115.webp" alt="basket start" width="100%">
             </td>
             <td>
                 <h3><span style="color: rgb(5, 125, 63);">Meet the basket star</span>
