--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </tr>
         <tr>
             <td>
-                <img src="C:\Users\epsib\OneDrive\Documents\Webtech\webtech_exp1\Image\beaded-comb-jelly-esvensen_skjermbilde-2020-11-09.webp" alt="Meet the beaded comb jelly" width="100%">
+                <img src="Image/beaded-comb-jelly-esvensen_skjermbilde-2020-11-09.webp" alt="Meet the beaded comb jelly" width="100%">
             </td>
             <td>
                 <h3><span style="color: rgb(3, 145, 77);">Meet the beaded comb jelly</span>
